Colaboratory를 통해 생성됨

--- a/멜론차트_분석.ipynb
+++ b/멜론차트_분석.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNprTTvc/Ozrof+aKUlLJSS",
+      "authorship_tag": "ABX9TyM6j6q3MOY4pM7AhSDjGoJS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -484,7 +484,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 948
+          "height": 1000
         },
         "id": "jWrmca2JyQrE",
         "outputId": "cf7e4b02-b018-4831-8923-93002409d4fd"
@@ -508,7 +508,14 @@
       "source": [
         "# **결론**\n",
         "\n",
-        "\n"
+        "Top100 정보를 보아 현재\n",
+        "아이돌 쪽의 노래가 대중적으로 가장 많은 관심을 보입니다.\n",
+        "\n",
+        "Hot100 의 트로트 쪽의 스트리밍 수를 보아 팬층이 두껍다는 것을 알 수 있었습니다.\n",
+        "\n",
+        "또한 악동 뮤지션이나 화사를 보았을 때,  sns의 챌린지 영상이 멜론 순위에 영향을 줄 수 있구나 생각했습니다.\n",
+        "\n",
+        "전체적인 차트를 보았을 경우 결국 팬층에 따라 차트에 진입하는 노래의 수가 결정된다는 것을 알 수 있습니다.\n"
       ],
       "metadata": {
         "id": "FE2m4H42KuND"
